# polenta-meeting-notes

./: .gitignore  DESIGN.md  Makefile  README.md
backend/: pyproject.toml
backend/meetingnotes/: __main__.py  config.py
backend/meetingnotes/api/: app.py
backend/meetingnotes/calendar/: client.py  detection.py
backend/meetingnotes/enrolment/: assignments.py  embedder.py  gallery.py  management.py  matching.py
backend/meetingnotes/jobs/: importer.py  queue.py  stages.py  worker.py
backend/meetingnotes/language/: british.py  britpass.py  emdash.py  flag.py  lint.py
backend/meetingnotes/llm/: chat.py  client.py  errors.py  folder_filing.py  folders.py  librarychat.py  summary.py
backend/meetingnotes/logging/: setup.py
backend/meetingnotes/notes/: notes.py  ocr.py
backend/meetingnotes/pipeline/: audio_io.py  device.py  normalize.py  runner.py  segments.py  silence.py  vocabulary.py  whisperx_engine.py
backend/meetingnotes/resources/: NOTICE-VarCon.txt  american_to_british.json  summary_prompt.md  technical_allowlist.txt
backend/meetingnotes/storage/: cleanup.py  db.py  folders.py  frontmatter.py  keychain.py  meetings.py  refresh.py  retention.py  transcript.py  vault.py
backend/meetingnotes/tools/: granola_import.py
backend/meetingnotes/vectors/: chunking.py  indexer.py  store.py
backend/scripts/: build_british_map.py  make_fixtures.py
backend/tests/: conftest.py
backend/tests/integration/: test_ac_1_0_worker.py  test_ac_1_3_corrections.py  test_ac_1_4_notes_images.py  test_ac_1_9_purge.py  test_ac_2_1_retrieval.py  test_ac_2_2_calendar.py  (+8 more)
(+84 files in other folders)
