[project]
name = "meetingnotes"
version = "0.1.0"
description = "Local, private meeting notes backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "spylls>=0.1.7",
    "lancedb>=0.6",
    "pyobjc-framework-Vision>=10.2; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.2; sys_platform == 'darwin'",
]

[project.optional-dependencies]
# The real transcription and diarisation pipeline. Heavy. Needed only for the
# [pipeline] tier at phase boundaries, never for the fast gate.
pipeline = [
    "whisperx>=3.1",
    "pyannote.audio>=3.1",
]
# The real bge-m3 embedding model. Heavy. The fast gate injects a fake embedder.
embeddings = [
    "FlagEmbedding>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meetingnotes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "pipeline: slow tests that run the real WhisperX and pyannote pipeline; phase boundaries only",
    "live_smoke: short on-demand runs against a real loaded LM Studio model",
    "manual_hardware: placeholders for the written checklist run by a person; always skipped",
]
addopts = "-ra"
